@@ -4,6 +4,8 @@
 	* src/groupadd.c: Add logging to syslog in some error cases.
 	* src/groupmod.c: Harmonize error & syslog messages.
 	* src/groupdel.c: Harmonize error & syslog messages.
+	* src/groupdel.c: Add logging to syslog & audit on lock/unlock
+	failures.
 
 2008-08-01  Nicolas François  <nicolas.francois@centraliens.net>
 
